--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,290 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".DetailActivity">
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+        android:layout_margin="10dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="7dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-light"
-            android:text="@string/country"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/_0"
-            android:id="@+id/tvCountry"
-            android:textAlignment="textEnd"
-            android:textSize="18sp"
-            android:textColor="@color/color_one"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-condensed-light"
-            android:layout_alignParentEnd="true"/>
+            android:orientation="vertical">
 
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_two"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:text="Total Cases in India"
+                android:textAlignment="center"
+                android:gravity="center_horizontal"
+                android:textSize="28sp"
+                android:padding="3dp"
+                android:layout_margin="3dp" />
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="3">
+                
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-light"
-            android:text="@string/cases"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/_0"
-            android:id="@+id/tvCases"
-            android:textAlignment="textEnd"
-            android:textSize="18sp"
-            android:textColor="@color/color_one"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-condensed-light"
-            android:layout_alignParentEnd="true"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Cases"
+                        android:padding="4dp"
+                        android:textSize="15sp"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal"
+                        android:fontFamily="sans-serif-condensed-light"
+                        android:textStyle="bold"/>
 
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_two"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+                    <TextView
+                        android:id="@+id/tvdetailcases"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Number of Cases"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/color_one"
+                        android:padding="4dp"
+                        android:textStyle="bold"
+                        android:textSize="25sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-light"
-            android:text="@string/today_cases"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/_0"
-            android:id="@+id/tvTodayCases"
-            android:textAlignment="textEnd"
-            android:textSize="18sp"
-            android:textColor="@color/color_one"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-condensed-light"
-            android:layout_alignParentEnd="true"/>
+                </LinearLayout>
 
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_two"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-light"
-            android:text="@string/deaths"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/_0"
-            android:id="@+id/tvDeaths"
-            android:textAlignment="textEnd"
-            android:textSize="18sp"
-            android:textColor="@color/color_one"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-condensed-light"
-            android:layout_alignParentEnd="true"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-condensed-light"
+                        android:text="Recovered"
+                        android:padding="4dp"
+                        android:textSize="15sp"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"/>
 
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_two"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
-    <RelativeLayout
+                    <TextView
+                        android:id="@+id/tvdetailrecovered"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Number of Recovered"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/color_one"
+                        android:padding="4dp"
+                        android:textStyle="bold"
+                        android:textSize="25sp"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-condensed-light"
+                        android:text="Deaths"
+                        android:padding="4dp"
+                        android:textSize="15sp"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/tvdetaildeaths"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Number of Deaths"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/color_one"
+                        android:textStyle="bold"
+                        android:padding="4dp"
+                        android:textSize="25sp"/>
+
+                </LinearLayout>
+                
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-light"
-            android:text="@string/today_deaths"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/_0"
-            android:id="@+id/tvTodayDeaths"
-            android:textAlignment="textEnd"
-            android:textSize="18sp"
-            android:textColor="@color/color_one"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-condensed-light"
-            android:layout_alignParentEnd="true"/>
-
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_two"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-light"
-            android:text="@string/recovered"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/_0"
-            android:id="@+id/tvRecovered"
-            android:textAlignment="textEnd"
-            android:textSize="18sp"
-            android:textColor="@color/color_one"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-condensed-light"
-            android:layout_alignParentEnd="true"/>
-
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_two"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-light"
-            android:text="@string/active"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/_0"
-            android:id="@+id/tvActive"
-            android:textAlignment="textEnd"
-            android:textSize="18sp"
-            android:textColor="@color/color_one"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-condensed-light"
-            android:layout_alignParentEnd="true"/>
-
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_two"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-light"
-            android:text="@string/critical"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/_0"
-            android:id="@+id/tvCritical"
-            android:textAlignment="textEnd"
-            android:textSize="18sp"
-            android:textColor="@color/color_one"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-condensed-light"
-            android:layout_alignParentEnd="true"/>
-
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_two"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
+        android:id="@+id/RVStates"/>
 
 </LinearLayout>
