--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,8 @@
     <color name="deaths">#EF5350</color>
     <color name="active">#29B6F6</color>
     <color name="white">#FFFFFF</color>
+    <color name="red">#F44336</color>
+    <color name="green">#4CAF50</color>
+    <color name="blue">#673AB7</color>
+    <color name="black">#000000</color>
 </resources>
