--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".DetailActivity">
 
     <androidx.cardview.widget.CardView
@@ -22,21 +23,23 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/aclonica"
                 android:textAllCaps="true"
                 android:textStyle="bold"
-                android:text="Total Cases in India"
+                android:text="@string/total_cases_in_india"
                 android:textAlignment="center"
                 android:gravity="center_horizontal"
-                android:textSize="28sp"
+                android:textSize="20sp"
                 android:padding="3dp"
                 android:layout_margin="3dp" />
-            
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="3">
-                
+                android:weightSum="3"
+                android:baselineAligned="false">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -46,7 +49,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Cases"
+                        android:text="@string/cases"
                         android:padding="4dp"
                         android:textSize="15sp"
                         android:textAlignment="center"
@@ -58,7 +61,7 @@
                         android:id="@+id/tvdetailcases"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Number of Cases"
+                        android:text="@string/number_of_cases"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@color/color_one"
@@ -78,7 +81,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-condensed-light"
-                        android:text="Recovered"
+                        android:text="@string/recovered"
                         android:padding="4dp"
                         android:textSize="15sp"
                         android:textAlignment="center"
@@ -89,7 +92,7 @@
                         android:id="@+id/tvdetailrecovered"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Number of Recovered"
+                        android:text="@string/number_of_recovered"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@color/color_one"
@@ -109,7 +112,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-condensed-light"
-                        android:text="Deaths"
+                        android:text="@string/deaths"
                         android:padding="4dp"
                         android:textSize="15sp"
                         android:textAlignment="center"
@@ -120,7 +123,7 @@
                         android:id="@+id/tvdetaildeaths"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Number of Deaths"
+                        android:text="@string/number_of_deaths"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@color/color_one"
@@ -129,16 +132,18 @@
                         android:textSize="25sp"/>
 
                 </LinearLayout>
-                
+
             </LinearLayout>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RVStates"
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="fill_parent"
+        android:id="@+id/listView"
+        android:layout_margin="10dp"/>
+
 
 </LinearLayout>
