--- a/app/src/main/res/layout/list_custom_item.xml
+++ b/app/src/main/res/layout/list_custom_item.xml
@@ -10,9 +10,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
-        app:cardCornerRadius="3dp"
-        app:cardElevation="3dp">
+        android:layout_margin="10dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="7dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,22 +20,24 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/TVStates"
+                android:id="@+id/tvdistrict"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="State Name"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:text="@string/district"
                 android:textAlignment="center"
                 android:gravity="center_horizontal"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:padding="3dp"
-                android:layout_margin="3dp"
-                android:textColor="@color/black"/>
+                android:layout_margin="3dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="3">
+                android:weightSum="3"
+                android:baselineAligned="false">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -46,24 +48,25 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Cases"
+                        android:text="@string/cases"
                         android:padding="4dp"
                         android:textSize="15sp"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
-                        android:textColor="@color/black"
+                        android:fontFamily="sans-serif-condensed-light"
                         android:textStyle="bold"/>
 
                     <TextView
-                        android:id="@+id/tvstatecases"
+                        android:id="@+id/tvdetailcases"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Number of Cases"
+                        android:text="@string/number_of_cases"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
-                        android:textColor="@color/blue"
+                        android:textColor="@color/color_one"
                         android:padding="4dp"
-                        android:textSize="12sp"/>
+                        android:textStyle="bold"
+                        android:textSize="25sp"/>
 
                 </LinearLayout>
 
@@ -76,24 +79,25 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Recovered"
+                        android:fontFamily="sans-serif-condensed-light"
+                        android:text="@string/recovered"
                         android:padding="4dp"
                         android:textSize="15sp"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
-                        android:textColor="@color/black"
                         android:textStyle="bold"/>
 
                     <TextView
-                        android:id="@+id/tvstaterecovered"
+                        android:id="@+id/tvdetailrecovered"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Number of Recovered"
+                        android:text="@string/number_of_recovered"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
-                        android:textColor="@color/green"
+                        android:textColor="@color/color_one"
                         android:padding="4dp"
-                        android:textSize="12sp"/>
+                        android:textStyle="bold"
+                        android:textSize="25sp"/>
 
                 </LinearLayout>
 
@@ -106,24 +110,25 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Deaths"
+                        android:fontFamily="sans-serif-condensed-light"
+                        android:text="@string/deaths"
                         android:padding="4dp"
                         android:textSize="15sp"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
-                        android:textColor="@color/black"
                         android:textStyle="bold"/>
 
                     <TextView
-                        android:id="@+id/tvstatedeaths"
+                        android:id="@+id/tvdetaildeaths"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Number of Deaths"
+                        android:text="@string/number_of_deaths"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
-                        android:textColor="@color/red"
+                        android:textColor="@color/color_one"
+                        android:textStyle="bold"
                         android:padding="4dp"
-                        android:textSize="12sp"/>
+                        android:textSize="25sp"/>
 
                 </LinearLayout>
 
